--- a/ndmanager/src/CMakeLists.txt
+++ b/ndmanager/src/CMakeLists.txt
@@ -14,13 +14,13 @@ set(ndmanager_SRCS acquisitionsystempage.cpp
         tags.cpp unitlistlayout.cpp unitlistpage.cpp unittable.cpp unittableitem.cpp
         videopage.cpp xmlreader.cpp xmlwriter.cpp)
 
-kde3_automoc(${ndmanager_SRCS})
-
 set(ndmanager_UI acquisitionsystemlayout.ui anatomylayout.ui channelcolorslayout.ui channeloffsetslayout.ui clusterslayout.ui filelayout.ui generalinfolayout.ui launcherlayout.ui lfplayout.ui neuroscopemisclayout.ui neuroscopevideolayout.ui parameterlayout.ui spikelayout.ui videolayout.ui ) 
 
-KDE3_ADD_UI_FILES(ndmanager_SRCS ${ndmanager_UI})
+qt4_wrap_ui(ndmanager_SRCS ${ndmanager_UI})
 
 add_executable(ndmanager ${ndmanager_SRCS} )
 
 target_link_libraries(ndmanager ${QT_LIBRARIES} kdeui kdecore kio kdefx kparts ktexteditor ${LIBXML2_LIBRARIES})
 
+install(PROGRAMS ndmanager DESTINATION bin)
+add_subdirectory(icons)
