--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -8,10 +8,10 @@ find_package(LibKlustersShared REQUIRED)
 add_definitions(${QT_DEFINITIONS})
 SET( QT_USE_QT3SUPPORT TRUE )
 set( QT_USE_XML TRUE)
-
+set( QT_USE_QTWEBKIT TRUE) 
 
 # tell cmake where to search for Qt/KDE headers:
-include_directories(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_QT3SUPPORT_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${LIBKLUSTERSSHARED_INCLUDE_DIR})
+include_directories(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_QT3SUPPORT_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${LIBKLUSTERSSHARED_INCLUDE_DIR} ${QT_QTWEBKIT_INCLUDE_DIR})
 
 #FIXME
 add_definitions(-fexceptions -DQT3_SUPPORT)
