--- a/ndmanager/src/CMakeLists.txt
+++ b/ndmanager/src/CMakeLists.txt
@@ -20,12 +20,12 @@ set(ndmanager_SRCS
 	main.cpp 
 	managerview.cpp 
 	miscellaneouspage.cpp
-	#ndmanager.cpp 
-	#ndmanagerdoc.cpp
+	ndmanager.cpp 
+	ndmanagerdoc.cpp
         neuroscopevideoinfo.cpp 
 	neuroscopevideopage.cpp
         parameterpage.cpp 
-	#parameterview.cpp 
+	parameterview.cpp 
 	pref.cpp 
 	programinformation.cpp 
 	programspage.cpp
