Make it compile

--- a/ndmanager/src/CMakeLists.txt
+++ b/ndmanager/src/CMakeLists.txt
@@ -31,7 +31,7 @@ set(ndmanager_SRCS
 	programspage.cpp
 	programpage.cpp	
 	queryinputdialog.cpp 
-	#queryoutputdialog.cpp 
+	queryoutputdialog.cpp 
 	spikepage.cpp
         tags.cpp 
 	unitlistlayout.cpp 
@@ -82,6 +82,6 @@ qt4_wrap_ui(ndmanager_SRCS ${ndmanager_UI})
 
 add_executable(ndmanager ${ndmanager_SRCS} )
 
-target_link_libraries(ndmanager ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${QT_QT3SUPPORT_LIBRARY} ${QT_QTXML_LIBRARY} ${LIBKLUSTERSSHARED_LIBRARY})
+target_link_libraries(ndmanager ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${QT_QT3SUPPORT_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTWEBKIT_LIBRARY} ${LIBKLUSTERSSHARED_LIBRARY})
 
 install(PROGRAMS ndmanager DESTINATION bin)
