--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -11,7 +11,11 @@ set( QT_USE_XML TRUE)
 set( QT_USE_QTWEBKIT TRUE) 
 
 # tell cmake where to search for Qt/KDE headers:
-include_directories(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_QT3SUPPORT_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${LIBKLUSTERSSHARED_INCLUDE_DIR} ${QT_QTWEBKIT_INCLUDE_DIR})
+include_directories(${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_QT3SUPPORT_INCLUDE_DIR} ${QT_QTXML_INCLUDE_DIR} ${LIBKLUSTERSSHARED_INCLUDE_DIR} )
+
+if(QT_QTWEBKIT_FOUND)
+	include_directories(${QT_QTWEBKIT_INCLUDE_DIR})
+endif()
 
 #FIXME
 add_definitions(-fexceptions -DQT3_SUPPORT)
