--- a/ndmanager/src/CMakeLists.txt
+++ b/ndmanager/src/CMakeLists.txt
@@ -80,7 +80,7 @@ qt4_wrap_ui(ndmanager_SRCS ${ndmanager_UI})
 
 add_executable(ndmanager ${ndmanager_SRCS} )
 
-target_link_libraries(ndmanager ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${QT_QT3SUPPORT_LIBRARY} ${QT_QTXML_LIBRARY} ${LIBKLUSTERSSHARED_LIBRARY})
+target_link_libraries(ndmanager ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${QT_QTXML_LIBRARY} ${LIBKLUSTERSSHARED_LIBRARY})
 
 if(QT_QTWEBKIT_FOUND)
 	target_link_libraries(ndmanager ${QT_QTWEBKIT_LIBRARY})
