Allow to install default xml file

--- a/ndmanager/src/CMakeLists.txt
+++ b/ndmanager/src/CMakeLists.txt
@@ -86,4 +86,6 @@ if(QT_QTWEBKIT_FOUND)
 	target_link_libraries(ndmanager ${QT_QTWEBKIT_LIBRARY})
 endif()
 
+install(FILES ndManagerDefault.xml DESTINATION share/applications/ndmanager/)
+
 install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/ndmanager DESTINATION bin)
