--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
 include(MacroEnsureVersion)
 find_package(LibXml2 REQUIRED)
-find_package(LibKlustersShared REQUIRED)
+find_package(LibKlustersShared 1.0.0 REQUIRED)
 include(CheckCXXCompilerFlag)
 add_definitions(${QT_DEFINITIONS})
 set( QT_USE_XML TRUE)
