--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -132,3 +132,28 @@ add_subdirectory(src)
 add_subdirectory(po)
 add_subdirectory(doc)
 
+INCLUDE(InstallRequiredSystemLibraries)
+if(WIN32)
+  set(CPACK_GENERATOR "NSIS")
+  set(CPACK_PACKAGE_EXECUTABLES "ndmanager" "ndmanager")
+endif()
+if(UNIX)
+  if(APPLE)
+    set( CMAKE_INSTALL_PREFIX "/Applications" )
+    set( CPACK_GENERATOR "DragNDrop" )
+    set( CPACK_DMG_FORMAT "UDBZ" )
+    set( CPACK_DMG_VOLUME_NAME "ndmanager" )
+    set( CPACK_SYSTEM_NAME "OSX" )
+  else()
+    set(CPACK_GENERATOR "TGZ") # for testing mostly, we probably want STGZ or RPM/DEB
+    set(CPACK_SYSTEM_NAME "${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+  endif()
+endif()
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ndmanager")
+set(CPACK_PACKAGE_NAME "ndmanager" )
+set(CPACK_PACKAGE_VERSION_MAJOR "2")
+set(CPACK_PACKAGE_VERSION_MINOR "0")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "ndmanager")
+include(CPack)
+
+
