--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -216,7 +216,6 @@ add_subdirectory(po)
 add_subdirectory(doc)
 
 INCLUDE(InstallRequiredSystemLibraries)
-
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ndmanager")
 set(CPACK_PACKAGE_NAME "ndmanager" )
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
@@ -255,14 +254,16 @@ if(UNIX)
       endif()
 		set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michaël Zugaro")
 		set(CPACK_DEBIAN_PACKAGE_SECTION "Science")
-		set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "klusters, neuroscope, ndmanager")
+		set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "nphys-data, klusters, neuroscope")
+		set(CPACK_DEBIAN_PACKAGE_DEPENDS "libklustersshared, libqt4-network, libqt4-xml, libqtcore4, libqtgui4, libqtwebkit4")
 		set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm;" )
-		set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "http://neuroscope.sourceforge.net")
+		set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "http://ndmanager.sourceforge.net")
 		set(CPACK_GENERATOR "DEB")
 		set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}-${RELEASE}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
 	   set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm;" )
 
     endif(DISTRIBUTION STREQUAL "Ubuntu")
+
   endif()
 endif()
 include(CPack)
