Fixed package description

--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -216,7 +216,8 @@ add_subdirectory(po)
 add_subdirectory(doc)
 
 INCLUDE(InstallRequiredSystemLibraries)
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ndmanager")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Manager for neurophysiological and behavioral data")
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/description)
 set(CPACK_PACKAGE_NAME "ndmanager" )
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "99")
