--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -274,9 +274,9 @@ if(UNIX)
         set(CPACK_PACKAGE_CONTACT "Michaël Zugaro")
         set(CPACK_RPM_PACKAGE_GROUP "Science")
         set(CPACK_RPM_PACKAGE_LICENSE "GPL")		
-        set(CPACK_RPM_PACKAGE_SUGGESTS "nphys-data, klusters, ndmanager")
+        set(CPACK_RPM_PACKAGE_SUGGESTS "nphys-data, klusters, neuroscope")
         set(CPACK_RPM_PACKAGE_REQUIRES "libklustersshared, libqt4, libqt4-x11, libQtWebKit4")
-        set(CPACK_RPM_PACKAGE_URL "http://neuroscope.sourceforge.net")
+        set(CPACK_RPM_PACKAGE_URL "http://ndmanager.sourceforge.net")
         set(CPACK_GENERATOR "RPM")
         set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${RELEASE}.${CPACK_RPM_PACKAGE_ARCHITECTURE})
         set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
