--- a/ndmanager/doc/CMakeLists.txt
+++ b/ndmanager/doc/CMakeLists.txt
@@ -32,5 +32,5 @@ endif(DOCBOOK2HTML_EXECUTABLE)
 endif()
 
 file(GLOB _html ${CMAKE_CURRENT_SOURCE_DIR}/en/html/*.html)
-install(FILES ${_html} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/ndmanager/HTML/en)
+install(FILES ${_html} DESTINATION share/doc/ndmanager/HTML/en)
 
