--- a/ndmanager/CMakeLists.txt
+++ b/ndmanager/CMakeLists.txt
@@ -276,7 +276,7 @@ if(UNIX)
 
     # >>> TEMPLATE CODE FOR ADDITIONAL DEBIAN-LIKE DISTRIBUTIONS <<<
     
-    #elsif(DISTRIBUTION STREQUAL "Ubuntu")
+    #elseif(DISTRIBUTION STREQUAL "Ubuntu")
 
     #  # Set Ubuntu-specific information (see http://www.cmake.org/Wiki/CMake:CPackPackageGenerators)
     #  if(ARCHITECTURE MATCHES ".*x86_64.*")
