Fix install image

--- a/ndmanager/doc/CMakeLists.txt
+++ b/ndmanager/doc/CMakeLists.txt
@@ -34,3 +34,8 @@ endif()
 file(GLOB _html ${CMAKE_CURRENT_SOURCE_DIR}/en/html/*.html)
 install(FILES ${_html} DESTINATION share/doc/ndmanager/HTML/en)
 
+file(GLOB _image ${CMAKE_CURRENT_SOURCE_DIR}/en/Images/*.png)
+
+install(FILES ${_image} DESTINATION share/doc/ndmanager/HTML/en/Images)
+
+
