Fix cmake code to find docbook xsl for manpages

--- a/ndmanager-plugins/src/process_resample/CMakeLists.txt
+++ b/ndmanager-plugins/src/process_resample/CMakeLists.txt
@@ -19,7 +19,13 @@ install(TARGETS ${program} DESTINATION bin)
 
 # Create and install man pages
 set(docbooks process_resample.docbook)
-find_file(xsl docbook.xsl /usr/share/apps/ksgmltools2/docbook/xsl/manpages/)
+file(GLOB_RECURSE files /usr/share/docbook.xsl)
+foreach(file ${files})
+	string(FIND ${file} manpages found)
+	if (NOT found EQUAL -1)
+		set(xsl ${file})
+	endif()
+endforeach()
 set(manpages)
 foreach(docbook ${docbooks})
 	string(REGEX REPLACE docbook 1 manpage ${docbook})
