--- a/ndmanager-plugins/python/ndm_prepare/CMakeLists.txt
+++ b/ndmanager-plugins/python/ndm_prepare/CMakeLists.txt
@@ -46,7 +46,13 @@ install(FILES ${desktop} DESTINATION ${SERVICES_INSTALL_DIR}/ServiceMenus)
 
 # Create and install man pages
 set(docbooks ndm_prepare.docbook)
-find_file(xsl docbook.xsl /usr/share/apps/ksgmltools2/docbook/xsl/manpages/)
+file(GLOB_RECURSE files /usr/share/docbook.xsl)
+foreach(file ${files})
+	string(FIND ${file} manpages found)
+	if (NOT found EQUAL -1)
+		set(xsl ${file})
+	endif()
+endforeach()
 set(manpages)
 foreach(docbook ${docbooks})
 	string(REGEX REPLACE docbook 1 manpage ${docbook})
