--- a/ndmanager-plugins/src/process_extractleds/CMakeLists.txt
+++ b/ndmanager-plugins/src/process_extractleds/CMakeLists.txt
@@ -13,7 +13,13 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${program}" DESTINATION bin)
 
 # Create and install man pages
 set(docbooks process_extractleds.docbook)
-find_file(xsl docbook.xsl /usr/share/apps/ksgmltools2/docbook/xsl/manpages/)
+file(GLOB_RECURSE files /usr/share/docbook.xsl)
+foreach(file ${files})
+	string(FIND ${file} manpages found)
+	if (NOT found EQUAL -1)
+		set(xsl ${file})
+	endif()
+endforeach()
 set(manpages)
 foreach(docbook ${docbooks})
 	string(REGEX REPLACE docbook 1 manpage ${docbook})
