Force manpage compression

--- a/ndmanager-plugins/src/process_extractleds/CMakeLists.txt
+++ b/ndmanager-plugins/src/process_extractleds/CMakeLists.txt
@@ -24,7 +24,7 @@ set(manpages)
 foreach(docbook ${docbooks})
 	string(REGEX REPLACE docbook 1 manpage ${docbook})
 	add_custom_command(OUTPUT ${manpage} DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}" COMMAND xsltproc ${xsl} "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}")
-	add_custom_command(OUTPUT ${manpage}.gz DEPENDS ${manpage} COMMAND gzip ${manpage})
+	add_custom_command(OUTPUT ${manpage}.gz DEPENDS ${manpage} COMMAND gzip -f ${manpage})
 	list(APPEND manpages ${manpage}.gz)
 	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${manpage}.gz" DESTINATION man/man1)
 endforeach()
