Fix process_resample/CMakeLists.txt for non-Ubuntu distributions

--- a/ndmanager-plugins/src/process_resample/CMakeLists.txt
+++ b/ndmanager-plugins/src/process_resample/CMakeLists.txt
@@ -4,17 +4,15 @@ cmake_minimum_required(VERSION 2.8.6)
 # Build and install program
 set(source process_resample.c)
 set(program process_resample)
-set(libsamplerate libsamplerate-0.1.8)
-set(libpath ./libsamplerate/src/.libs)
-set(lib samplerate.a)
-set(libs m)
-add_custom_command(OUTPUT libsamplerate1 COMMAND [ -d libsamplerate ] || cp -a "${CMAKE_CURRENT_SOURCE_DIR}/${libsamplerate}" libsamplerate)
-add_custom_command(OUTPUT libsamplerate2 COMMAND cd libsamplerate && ./configure && make DEPENDS libsamplerate1)
-add_custom_target(libsamplerate DEPENDS libsamplerate2)
+set(lsr_source "${CMAKE_CURRENT_SOURCE_DIR}/libsamplerate-0.1.8")
+set(lsr_lib "${CMAKE_CURRENT_BINARY_DIR}/lsr/src/.libs/libsamplerate.a")
+set(libs m ${lsr_lib})
+add_custom_command(OUTPUT lsr1 COMMAND [ -d lsr ] || cp -a ${lsr_source} lsr)
+add_custom_command(OUTPUT lsr2 COMMAND cd lsr && ./configure && make DEPENDS lsr1)
+add_custom_target(lsr DEPENDS lsr2)
 add_executable(${program} ${source})
-add_dependencies(${program} libsamplerate)
-link_directories(${libpath})
-target_link_libraries(${program} ${lib} ${libs})
+add_dependencies(${program} lsr)
+target_link_libraries(${program} ${libs})
 install(TARGETS ${program} DESTINATION bin)
 
 # Create and install man pages
