Fix package dependencies

--- a/ndmanager-plugins/CMakeLists.txt
+++ b/ndmanager-plugins/CMakeLists.txt
@@ -34,6 +34,7 @@ if(DISTRIBUTION STREQUAL "Ubuntu")
   set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michaël Zugaro")
   set(CPACK_DEBIAN_PACKAGE_SECTION "Science")
   set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "klusters, neuroscope, ndmanager")
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libasyncns0, libjson0, libtinfo5, libgsl0ldbl, python-qt4, libav-tools")
   set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "http://ndmanager.sourceforge.net")
   set(CPACK_GENERATOR "DEB")
   set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}-${RELEASE}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
@@ -52,6 +53,7 @@ if(DISTRIBUTION STREQUAL "Ubuntu")
 #  set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michaël Zugaro")
 #  set(CPACK_DEBIAN_PACKAGE_SECTION "Science")
 #  set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "klusters, neuroscope, ndmanager")
+#  set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
 #  set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "http://ndmanager.sourceforge.net")
 #  set(CPACK_GENERATOR "DEB")
 #  set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm;" )
@@ -69,6 +71,7 @@ elseif(DISTRIBUTION MATCHES "openSUSE.*")
   set(CPACK_RPM_PACKAGE_GROUP "Science")
   set(CPACK_RPM_PACKAGE_LICENSE "GPL")
   set(CPACK_RPM_PACKAGE_SUGGESTS "klusters, neuroscope, ndmanager")
+  set(CPACK_RPM_PACKAGE_REQUIRES "")
   set(CPACK_RPM_PACKAGE_URL "http://ndmanager.sourceforge.net")
   set(CPACK_GENERATOR "RPM")
   set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${RELEASE}.${CPACK_RPM_PACKAGE_ARCHITECTURE})
@@ -88,6 +91,7 @@ elseif(DISTRIBUTION STREQUAL "Fedora")
   set(CPACK_RPM_PACKAGE_GROUP "Science")
   set(CPACK_RPM_PACKAGE_LICENSE "GPL")
   set(CPACK_RPM_PACKAGE_SUGGESTS "klusters, neuroscope, ndmanager")
+  set(CPACK_RPM_PACKAGE_REQUIRES "")
   set(CPACK_RPM_PACKAGE_URL "http://ndmanager.sourceforge.net")
   set(CPACK_GENERATOR "RPM")
   set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}.fc${RELEASE}.${CPACK_RPM_PACKAGE_ARCHITECTURE})
@@ -104,6 +108,7 @@ elseif(DISTRIBUTION STREQUAL "Fedora")
 #  set(CPACK_RPM_PACKAGE_GROUP "Science")
 #  set(CPACK_RPM_PACKAGE_LICENSE "GPL")
 #  set(CPACK_RPM_PACKAGE_SUGGESTS "klusters, neuroscope, ndmanager")
+#  set(CPACK_RPM_PACKAGE_REQUIRES "")
 #  set(CPACK_RPM_PACKAGE_URL "http://ndmanager.sourceforge.net")
 #  set(CPACK_GENERATOR "RPM")
 #  set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
